reimplementation/adl2/crates/adl-syntax/tests/snapshots/snapshots__golden_btag_threshold.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/btag_threshold.adl\")"
---
File
  Object kw=object name=jets @1:1
    Take kw=take src=Jet @2:3
  Region kw=region name=SR_no @4:1
    Cut kw=select @5:3
      Cmp op=<
        Dot field=BTag
          Index 0
            Ident jets
        Num 1
  Region kw=region name=SR_yes @7:1
    Cut kw=select @8:3
      Cmp op=>
        Dot field=BTag
          Index 0
            Ident jets
        Num 0
---- diagnostics ----
