reimplementation/adl2/crates/adl-syntax/tests/snapshots/snapshots__golden_define_under_or.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/define_under_or.adl\")"
---
File
  Object kw=object name=MET @1:1
    Take kw=take src=MissingET @2:3
  Define kw=define name=lowmet @4:1
    Cmp op=<
      Dot field=pT
        Ident MET
      Num 100
  Region kw=region name=SR_a @6:1
    Cut kw=select @7:3
      Binary op=or
        Ident lowmet
        Cmp op=>
          Dot field=pT
            Ident MET
          Num 500
  Region kw=region name=SR_b @9:1
    Cut kw=select @10:3
      Cmp op=>
        Dot field=pT
          Ident MET
        Num 150
    Cut kw=select @11:3
      Cmp op=<
        Dot field=pT
          Ident MET
        Num 400
---- diagnostics ----
