reimplementation/adl2/crates/adl-syntax/tests/snapshots/snapshots__golden_disjoint_jet_index.snap
---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/disjoint_jet_index.adl\")"
---
File
  Object kw=object name=jets @1:1
    Take kw=take src=Jet @2:3
    Cut kw=select @3:3
      Cmp op=>
        Call name=pT
          Ident Jet
        Num 30
  Region kw=region name=SR_high @6:1
    Cut kw=select @7:3
      Cmp op=>
        Call name=pT
          Index 0
            Ident jets
        Num 300
  Region kw=region name=SR_low @9:1
    Cut kw=select @10:3
      Cmp op=<
        Call name=pT
          Index 0
            Ident jets
        Num 200
---- diagnostics ----
